refactor: export api crd groups as names